--- a/docs/css/wish.css
+++ b/docs/css/wish.css
@@ -1,3 +1,9 @@
 .wish .message {
-    /* hand style message */
+    width: 640px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.heart {
+    color: red;
 }
